update openai key

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,15 @@
+###
+ # @Author: leyi leyi@myun.info
+ # @Date: 2023-03-30 14:44:36
+ # @LastEditors: leyi leyi@myun.info
+ # @LastEditTime: 2023-03-30 14:53:28
+ # @FilePath: /chatgpt-pc-web/.env.example
+ # @Description: 
+ # 
+ # Copyright (c) 2023 by ${git_name_email}, All Rights Reserved. 
+### 
 # Your API Key for OpenAI
-OPENAI_API_KEY=
+OPENAI_API_KEY='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'
 # Provide proxy for OpenAI API. e.g. http://127.0.0.1:7890
 HTTPS_PROXY=
 # Custom base url for OpenAI API. default: https://api.openai.com
